--- a/client/carscollection/public/index.html
+++ b/client/carscollection/public/index.html
@@ -12,7 +12,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
 
-  <title>My Cars</title>
+  <title>My Cars App</title>
 </head>
 
 <body>
